@@ -1,23 +1,19 @@
 package com.github.lutzluca.btrbz.commands.alert;
 
+import com.github.lutzluca.btrbz.commands.alert.PriceExpression.AlertType;
+import com.github.lutzluca.btrbz.commands.alert.PriceExpression.Binary;
+import com.github.lutzluca.btrbz.commands.alert.PriceExpression.BinaryOperator;
+import com.github.lutzluca.btrbz.commands.alert.PriceExpression.Identifier;
+import com.github.lutzluca.btrbz.commands.alert.PriceExpression.Literal;
+import com.github.lutzluca.btrbz.data.BazaarData;
+import com.github.lutzluca.btrbz.utils.Util;
+import io.vavr.control.Try;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
-import com.github.lutzluca.btrbz.commands.alert.PriceExpression.*;
-import com.github.lutzluca.btrbz.utils.Util;
-import io.vavr.control.Try;
 
 public class AlertCommandParser {
-    public record AlertCommand(String productName, AlertType orderType,
-            PriceExpression priceExpression) {
-    }
-
-    public static class ParseException extends Exception {
-        public ParseException(String message) {
-            super(message);
-        }
-    }
 
     public AlertCommand parse(String args) throws ParseException {
         if (args.isEmpty()) {
@@ -58,21 +54,23 @@ public class AlertCommandParser {
         String[] priceTokens = Arrays.copyOfRange(tokens, orderTypeIndex + 1, tokens.length);
         String priceExprString = String.join(" ", priceTokens);
 
-        PriceExpression priceExpression = parsePriceExpression(priceExprString, orderType);
+        PriceExpression priceExpression = parsePriceExpression(priceExprString);
 
         return new AlertCommand(productName, orderType, priceExpression);
     }
 
     private String normalizeProductName(String[] tokens) throws ParseException {
-        var titleCaseTokens = Arrays.stream(tokens).filter(word -> !word.isEmpty()).map(
-                word -> Character.toUpperCase(word.charAt(0)) + word.substring(1).toLowerCase())
-                .collect(Collectors.toList());
+        var titleCaseTokens = Arrays
+            .stream(tokens)
+            .map(word -> Character.toUpperCase(word.charAt(0)) + word.substring(1).toLowerCase())
+            .collect(Collectors.toList());
 
-        var lastToken = titleCaseTokens.get(titleCaseTokens.size() - 1);
+        var lastToken = titleCaseTokens.getLast();
         var number = Try.of(() -> Integer.parseInt(lastToken));
         if (number.isSuccess()) {
-            var roman = number.map(Util::intToRoman).getOrElseThrow(err -> new ParseException(
-                    "Invalid product name number format: " + "\"" + lastToken + "\""));
+            var roman = number
+                .map(Util::intToRoman)
+                .getOrElseThrow(err -> new ParseException("Invalid product name number format: " + '"' + lastToken + '"'));
 
             titleCaseTokens.set(titleCaseTokens.size() - 1, roman);
         }
@@ -80,8 +78,7 @@ public class AlertCommandParser {
         return String.join(" ", titleCaseTokens);
     }
 
-    private PriceExpression parsePriceExpression(String expression, AlertType orderType)
-            throws ParseException {
+    private PriceExpression parsePriceExpression(String expression) throws ParseException {
         ExpressionTokenizer tokenizer = new ExpressionTokenizer(expression);
 
         PriceExpression expr = parseAdditive(tokenizer);
@@ -117,7 +114,7 @@ public class AlertCommandParser {
     }
 
     private PriceExpression parseMultiplicative(ExpressionTokenizer tokenizer)
-            throws ParseException {
+        throws ParseException {
         PriceExpression left = parsePrimary(tokenizer);
 
         while (tokenizer.hasNext()) {
@@ -163,30 +160,60 @@ public class AlertCommandParser {
     }
 
     private double parseNumber(String token) throws ParseException {
-        return Try.of(() -> {
-            String cleaned = token.replace(",", "").replace("_", "");
-            var lastChar = cleaned.charAt(cleaned.length() - 1);
+        return Try
+            .of(() -> {
+                String cleaned = token.replace(",", "").replace("_", "");
+                var lastChar = cleaned.charAt(cleaned.length() - 1);
 
-            return switch (lastChar) {
-                case 'k' -> {
-                    cleaned = cleaned.substring(0, cleaned.length() - 1);
-                    yield Double.parseDouble(cleaned) * 1_000.0;
-                }
-                case 'm' -> {
-                    cleaned = cleaned.substring(0, cleaned.length() - 1);
-                    yield Double.parseDouble(cleaned) * 1_000_000.0;
-                }
-                case 'b' -> {
-                    cleaned = cleaned.substring(0, cleaned.length() - 1);
-                    yield Double.parseDouble(cleaned) * 1_000_000_000.0;
-                }
-                default -> Double.parseDouble(cleaned);
-            };
-        }).map(val -> Math.round(val * 10.0) / 10.0)
-                .getOrElseThrow(err -> new ParseException("Malformed number format: " + token));
+                return switch (lastChar) {
+                    case 'k' -> {
+                        cleaned = cleaned.substring(0, cleaned.length() - 1);
+                        yield Double.parseDouble(cleaned) * 1_000.0;
+                    }
+                    case 'm' -> {
+                        cleaned = cleaned.substring(0, cleaned.length() - 1);
+                        yield Double.parseDouble(cleaned) * 1_000_000.0;
+                    }
+                    case 'b' -> {
+                        cleaned = cleaned.substring(0, cleaned.length() - 1);
+                        yield Double.parseDouble(cleaned) * 1_000_000_000.0;
+                    }
+                    default -> Double.parseDouble(cleaned);
+                };
+            })
+            .map(val -> Math.round(val * 10.0) / 10.0)
+            .getOrElseThrow(err -> new ParseException("Malformed number format: " + token));
+    }
+
+    public record AlertCommand(
+        String productName, AlertType type, PriceExpression priceExpression
+    ) {
+
+        public Try<ResolvedAlertCommand> resolve(BazaarData data) {
+            return this.priceExpression
+                .resolve(this.productName, this.type, data)
+                .map(price -> new ResolvedAlertCommand(
+                    this.productName,
+                    data.nameToId(this.productName).get(),
+                    this.type,
+                    price
+                ));
+        }
+    }
+
+    public record ResolvedAlertCommand(
+        String productName, String productId, AlertType type, double price
+    ) { }
+
+    public static class ParseException extends Exception {
+
+        public ParseException(String message) {
+            super(message);
+        }
     }
 
     private static class ExpressionTokenizer {
+
         private final List<String> tokens;
         private int pos;
 
